# GAb_API

./: .env  .env.example  .gitignore  Dockerfile  GAb_DB.db  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
app/: main.py  settings.py
app/models/: game.py
app/routes/: database.py  epic.py  free_games.py  test.py  util_routes.py
app/services/: Base_API.py  Convert_API.py  Epic_API.py  Free_Games_API.py
app/utils/: database.py  translate.py
