[tool.poetry]
name = "GAb_API"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "free_games_bot_kpi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
aiohttp = "^3.8.4"
googletrans = "3.1.0a0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
